kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bike-api
spec:
  selector:
    matchLabels:
      app: bike-api
  template:
    metadata:
      labels:
        app: bike-api
    spec:
      containers:
        - name: bike-api
          image: origo-container-registry.io/bike-api:IMAGE_VERSION
          resources:
            requests:
              memory: "20Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 3010
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 3100
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bike-frontend
spec:
  selector:
    matchLabels:
      app: bike-frontend
  template:
    metadata:
      labels:
        app: bike-frontend
    spec:
      containers:
        - name: bike-frontend
          image: origo-container-registry.io/bike-frontend:IMAGE_VERSION
          resources:
            requests:
              memory: "20Mi"
              cpu: "50m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          ports:
            - containerPort: 80
