kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bike-api
spec:
  selector:
    app: bike-api
  ports:
  - port: 80
    targetPort: 3010
---
apiVersion: v1
kind: Service
metadata:
  name: bike-frontend
spec:
  selector:
    app: bike-frontend
  ports:
  - port: 80
    targetPort: 80
